--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="dist/react-pomodoro.e31bb0bc.css"/>
 </head>
 <body>
-
+<h1>Pomodoro clock</h1>
 <div id="app"></div>
 <script src="index.js"></script>
 </body>
