--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>My pomodoro</title>
-</head>
+    <link rel="stylesheet" href="dist/react-pomodoro.e31bb0bc.css"></head>
 <body>
 <h1>Pomodoro clock</h1>
 <div id="app"></div>
-<script src="index.js"></script>
+<script src="dist/react-pomodoro.e31bb0bc.js"></script>
 </body>
 </html>
